fixed scrapbook on iPhone landscape

--- a/app/assets/stylesheets/temporary.css.sass
+++ b/app/assets/stylesheets/temporary.css.sass
@@ -2338,6 +2338,10 @@ header .navbar .navbar-collapse ul.nav li a.feedback
             display: none
 
 
+  #scrapbook #scrapbookContent, #scrapbook #scrapbookInfo
+    float: none
+
+
 
 
   .desktop
